Fixed section margins and anchor jump position

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -146,8 +146,8 @@ ul {
 }
 .section {
   text-align: center;
-  margin: 0 0 75px;
-  padding: 75px 0 50px;
+  margin: 0 0 25px;
+  padding: 25px 0 50px;
   @include mq(small) {
     padding: 25px 0;
     margin-bottom: 25px;
